--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             <artifactId>poi</artifactId>
             <version>5.4.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.11.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
